# segment

./: .gitignore  CMakeLists.txt  README.md
SQL/pgsql/: l.sh  note.sh
c/: Dockerfile
db/mysql/: table.sh
db/pgsql/: create_table.sh  note.sh  psql_note.md
db/redis/: redis_api.py
docker/: .dockerignore  API.md  Dockerfile  build_image.sh  docker-compose.yml  docker_command.sh  dockerfile  requirements.txt
docker/app/: Dockerfile  app.sh  docker-compose.yml  requirements.txt  start.sh
docker/command/: docker_command.sh
docker/conf/: Dockerfile  docker-compose.yml
docker/nvidia-smi/: Dockerfile  READEME.md
git/: HOME_git-credentials  HOME_gitconfig  HOME_ssh-config  config  git_for_windows_bashrc  gitconfig
git/app/: APP_GIT_config  config
html/: screeninch.html
linux/bash/: command.sh
linux/cmd/: change.sh
linux/git/: HOME_git-credentials  HOME_gitconfig
linux/shell/: log.sh  some_func  sync_time.md  utils.sh
linux/vim/: use.md  vimrc
mysql/: custom.cnf  sql.sh
nginx/: default
nginx/shell/: cut.sh  cut_logs.sh
python/: eval_exec_globals.py  library.md
python/common/: constant.py  logger.py
python/concurrent/: concurrent_test.py
python/date/: example.py
python/file/: comprssion.py
python/gpu/: env_set.md
python/leetcode/: demo.py
python/mysql/: constant.py  get_columns_of_table.py  mysql_manager_v2.py  other_command.py  requirements.txt
python/redis/: items_to_stream.py  redis_manager.py
python/ttest/: c1.py  consumer.py  mianshi.md  ms2.md  sanic_middle.py  sanic_middle_.py  sanic_token.py  singleton.py
tcpl/: Dockerfile
tcpl/base/: n1.c  n2.c  n3.c  n4.c  n5.c  n6.c  n9.c
the_c/base/: c7.c  c8.c
the_c/c_extend/: c1_byte_order.c  c2_type_size.c  c3_pointer_arrary.c  c3_pointer_continue.c  c4_increment_decrement.c  c4_p_increment_decrement.c  c5_int_pointer.c  c5_p_id.c
the_c/demo/: array_name.c  test.c  test1.c
(+104 files in other folders)
