cmake_minimum_required(VERSION 3.17)
project(segment)

set(CMAKE_C_STANDARD 11)

#add_executable(segment the_c/base/c1.c)
#add_executable(segment the_c/base/c11_double_pointer.c)
#add_executable(segment the_c/byte_order.c)
#add_executable(segment the_c/c_extend/type_size.c)
add_executable(segment the_c/c_extend/c3_pointer_arrary.c)
