cmake_minimum_required(VERSION 3.17)
project(segment)

set(CMAKE_C_STANDARD 11)

#add_executable(segment the_c/base/c5.c)

#add_executable(segment the_c/base/c11_double_pointer.c)
#add_executable(segment the_c/c_extend/c1_byte_order.c)
#add_executable(segment the_c/c_extend/c2_type_size.c)
#add_executable(segment the_c/c_extend/c3_pointer_arrary.c)
#add_executable(segment the_c/c_extend/c3_pointer_continue.c)
#add_executable(segment the_c/c_extend/c4_p_increment_decrement.c)
#add_executable(segment the_c/c_extend/c5_int_pointer.c)
#add_executable(segment the_c/demo/array_name.c)
add_executable(segment the_c/string/strcmp_test.c)
